# dorm-ac-tracker

./: .gitattributes  Makefile  README.md  config.toml  main.py  pyproject.toml
models/: yolo26n_float32.tflite  yolo26n_int8.tflite  yolov8n_float32.tflite  yolov8n_int8.tflite
scratch/: coding2.py  test_camera.py
src/: config.py
src/api/: app.py  db.py  index.html
src/drivers/: frame_source.py
src/hal/: camera.py
src/inference/: base.py  preprocessor.py  yolo_detector.py
src/services/: detection_service.py
